# kak-ethersync

./: Cargo.toml
rc/: ethersync.kak
src/: main.rs
test2/: file  test.c
test2/.ethersync/: doc  key
