[package]
name = "kak-ethersync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
env_logger = { version = "0.11.6", default-features = false, features = ["auto-color", "color", "humantime"] }
itertools = "0.13.0"
log = "0.4.22"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
similar = "2.6.0"
unicode-segmentation = "1.12.0"
tokio = { version = "1", features = ["rt", "macros", "net", "io-util", "process"] }
tokio-util = { version = "0.7.14", features = ["codec"] }
tokio-stream = { version = "0.1.17", default-features = false }
bytes = "1.10.1"
